# Library_management_system

./: CMakeLists.txt  library.c  library.h  library_stock.csv  loginandcommands.c  loginandcommands.h  main.c  menu.c  menu.h  path.c  path.h  person.c  person.h  users.csv
